Add NeoForge 1.21.1 port of the Link Mod